--- a/styles/style.css
+++ b/styles/style.css
@@ -1,120 +1,171 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    }
-
-body {
-    background-color: rgba(0, 0, 0, 0.90);
-    color: white;
-    font-family: 'Raleway', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: #8500C9;
-    background-color: black;
-    font-weight: 600;
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+  background-color: rgba(0, 0, 0, 0.9);
+  color: white;
+  font-family: "Raleway", sans-serif;
+}
+
+nav,
+footer {
+  width: 100vw;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: #8500c9;
+  background-color: black;
+  font-weight: 600;
 }
 
 .social {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 li img {
-    width: 30px;
-    margin: 10px;
+  width: 30px;
+  margin: 10px;
 }
 
 #nav-list {
-    display: flex;
-    justify-items: space-between;
+  display: flex;
+  justify-items: space-between;
 }
 
-#nav-list>li {
-    padding: 20px;
+#nav-list > li {
+  padding: 20px;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 #about {
-    margin: 50px 0;
-    display: flex;
-    align-items: flex-start;
+  margin: 50px 0;
+  display: flex;
+  align-items: flex-start;
 }
 
 #about img {
-    width: 200px;
-    margin-left: 50px;
-    border: 5px solid whitesmoke;
-    border-radius: 20px 0;
+  width: 190px;
+  margin-left: 50px;
+  border: 5px solid whitesmoke;
+  border-radius: 20px 0;
 }
 
 #about-text {
-    padding: 50px 0 0 30px;
+  padding: 50px 0 0 30px;
+  max-width: 600px;
 }
 
 .firstP {
-    color: #A804FB;
-    font-weight: 700;
-    font-size: 1.2rem;
+  color: #a804fb;
+  font-weight: 700;
+  font-size: 1.2rem;
 }
 
 .secondP {
-    font-size: 2.5rem;
-    font-weight: 900;
+  font-size: 2.5rem;
+  font-weight: 900;
+}
+
+.thirdP {
+  margin-top: 20px;
+  text-align: justify;
+}
+
+#techs {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 0 50px;
+  margin-bottom: 20px;
+  height: 150px;
+}
+
+#techs h1 {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.divTechs {
+  padding: 20px;
+  width: 45%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.divTechs img {
+  width: 30px;
 }
 
 a {
-    text-decoration: none;
-    color: #8500C9;
+  text-decoration: none;
+  color: #8500c9;
 }
 
 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 #project {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-left: 10px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 50px;
+  margin-bottom: 20px;
 }
 
 #project h1 {
-    margin-bottom: 20px;
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 20px;
 }
 
 .project-list {
-    overflow-x: scroll;
-    display: flex;
+  overflow-x: scroll;
+  width: 100%;
+  display: flex;
 }
 
 .project-list figure {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    font-weight: bold;
-    font-size: 1.2rem;
-    color: #A804FB;
-    border: 1px solid #28003C;
-    border-radius: 20px 0;
-    padding: 20px;
-    margin-right: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: bold;
+  font-size: 1.2rem;
+  color: #a804fb;
+  border: 2px solid #28003c;
+  border-radius: 20px 0;
+  padding: 20px;
+  margin-right: 10px;
 }
 
 .project-list figure figcaption {
-    margin-top: 10px;
-} 
+  margin-top: 10px;
+}
 
 figure img {
-    width: 400px;
+  width: 400px;
+}
+
+footer {
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: 40px;
+  height: 50px;
+}
+
+footer ul {
+  margin-right: 40px;
 }
