--- a/styles/responsivo.css
+++ b/styles/responsivo.css
@@ -1,94 +1,135 @@
-@media screen and (max-width: 1400px) {
-  .project-div{
-    flex-direction: column;
+@media screen and (max-width: 912px) {
+  .project-div {
     align-self: flex-start;
   }
 }
 
-@media screen and (max-width: 700px) {
-  .project-div figure{
-    width: fit-content;
+@media screen and (max-width: 1400px) {
+  #project {
+    overflow-x: scroll;
   }
 }
 
-@media screen and (max-width: 530px) {
-    #about {
-        margin: 50px 0;
-      }
-      
-      nav {
-        font-size: 0.7rem;
-      }
+@media screen and (max-width: 700px) {
+  #project {
+    overflow-x: initial;
+  }
 
-      li img {
-        width: 25px;
-      }
+  .project-div {
+    display: flex;
+    flex-direction: column;
+    align-self: flex-start;
+  }
 
-      #about img {
-        width: 100px;
-        margin-left: 20px;
-        border: 5px solid whitesmoke;
-        border-radius: 20px 0;
-      }
+  .project-div figure {
+    width: fit-content;
+  }
 
-      .firstP {
-        color: #a804fb;
-        font-weight: 700;
-        font-size: 0.8rem;
-      }
-      
-      .secondP {
-        font-size: 1.1rem;
-        font-weight: 900;
-      }
-      
-      .thirdP {
-        font-size: 0.6rem;
-        margin-top: 10px;
-      }
+  #techs {
+    padding: 20px;
+  }
 
-      #techs {
-        margin: 0 20px;
-        margin-bottom: 10px;
-        height: 75px;
-      }
-      #techs h1 {
-        font-size: 1rem;
-        font-weight: 700;
-      }
-      
-      .divTechs {
-        padding: 10px;
-        width: 100%;
-        }
-      
-      .divTechs img {
-        width: 20px;
-      }
+  .divTechs {
+    margin-left: 0;
+    padding: 20px;
+    width: fit-content;
+    gap: 10px;
+  }
 
-      #project {
-        margin-left: 20px;
-        margin-bottom: 10px;
-      }
-      
-      #project h1 {
-        font-size: 1rem;
-        font-weight: 700;
-        margin-bottom: 10px;
-      }
+  .divTechs img {
+    border-radius: 10px;
+    padding: 10px;
+    width: 60px;
+  }
 
-      .project-div figure {
-        font-size: 0.8rem;;
-        padding: 10px;
-        margin-right: 50px;
-      }
-      
-      .project-div figure figcaption {
-        margin-top: 5px;
-      }
-      
-      figure img {
-        width: 70vw;
-      }
-      
+}
+
+@media screen and (max-width: 540px) {
+  #about {
+    margin: 50px 0;
+  }
+
+  li img {
+    width: 20px;
+  }
+
+  footer .email {
+    width: 12px;
+  }
+
+  nav,
+  footer .div-email {
+    font-size: 0.6rem;
+  }
+
+  footer .div-email {
+    flex-direction: column-reverse;
+    gap: 5px;
+  }
+
+
+  #about img {
+    width: 100px;
+    margin-left: 20px;
+    border: 5px solid whitesmoke;
+    border-radius: 20px 0;
+  }
+
+  #about-text {
+    padding: 30px 0 0 10px;
+  }
+
+  .firstP {
+    color: #a804fb;
+    font-weight: 700;
+    font-size: 0.8rem;
+  }
+
+  .secondP {
+    font-size: 1.1rem;
+    font-weight: 900;
+  }
+
+  .thirdP {
+    font-size: 0.6rem;
+    margin-top: 10px;
+  }
+
+
+  #techs h1 {
+    font-size: 1rem;
+    font-weight: 700;
+  }
+
+  #project {
+    margin-left: 20px;
+    margin-bottom: 10px;
+  }
+
+  #project h1 {
+    font-size: 1rem;
+    font-weight: 700;
+    margin-bottom: 10px;
+  }
+
+  .project-div figure {
+    font-size: 0.8rem;
+    ;
+    padding: 10px;
+    margin-right: 50px;
+  }
+
+  .project-div figure figcaption {
+    margin-top: 5px;
+  }
+
+  figure img {
+    width: 70vw;
+  }
+
+  .divTechs img {
+    border-radius: 5px;
+    padding: 5px;
+    width: 30px;
+  }
 }
