--- a/styles/style.css
+++ b/styles/style.css
@@ -51,7 +51,7 @@ li img {
   justify-items: space-between;
 }
 
-#nav-list > li {
+#nav-list>li {
   padding: 20px;
 }
 
@@ -125,11 +125,11 @@ ul {
   right: 100px;
   padding: 30px;
   display: none;
-  align-items: center; 
+  align-items: center;
 
   background-color: rgba(134, 0, 201, 0.5);
   border-radius: 20px;
-  box-shadow: 10px 10px  rgba(83, 0, 124, 0.5);
+  box-shadow: 10px 10px rgba(83, 0, 124, 0.5);
 
   max-width: 600px;
   height: 250px;
@@ -137,7 +137,10 @@ ul {
   text-align: center;
 }
 
-.d-html, .d-css, .d-js, .d-react {
+.d-html,
+.d-css,
+.d-js,
+.d-react {
   display: none;
 }
 
