--- a/styles/style.css
+++ b/styles/style.css
@@ -169,6 +169,11 @@ a:hover {
   gap: 30px;
 }
 
+.project-div a:hover {
+  background-color: aqua;
+  border-radius: 20px;
+}
+
 #project h1 {
   font-size: 2.5rem;
   font-weight: 700;
